--- a/dirty ver.html
+++ b/dirty ver.html
@@ -19,6 +19,7 @@ td {
 
 <body>
 <h1 style="font-size: xxx-large;" style = "text-align: center;"> WELCOME ~~</h1>
+<h2 style="font-size: xxxx-small;">if you wanna see more clean ver. <a href="clean ver.html">click!</a></h2>
 
 <h2>> BASIC INFO</h2>
 <table>
@@ -57,7 +58,7 @@ td {
 아직 다양하고 많은 지식을 습득하는 과정에 있기에 저의 연구분야와 구체적인 전공은 찾아가는 길에 놓여있습니다. <br>
 짧은 몇십년간 살아오면서 제가 현재까지 가장 좋아하는 것은 '몰입'하는 것입니다. <br>
 대학에 오기전 몇년동안은 단기적인 것들에 몰입하곤했는데, 이제는 보다 더 안정적으로 장기적으로 몰입할 수 있는 것들을 찾고 있는 중입니다.</td>
-        <td style="width: 10%;"><img src = "photo.jpg" width="100%"></td>
+        <td style="width: 10%;"><img src = "hoho.jpg" width="100%"></td>
     </tr>
 </table>
 
@@ -65,7 +66,7 @@ td {
 <h2>> ACADEMIC DETAILS</h2>
 <table>
     <tr>
-       <td style="width: 10%;"><img src = "photo.jpg" width="100%"></td>
+       <td style="width: 10%;"><img src = "holahola.jpg" width="100%"></td>
        <td style="width: 90%;">ELEMENTRY SCHOOL IN DAEJEON (2012) <br> MIDDLE SCHOOL IN DAEJEON (2018)<br>HIGH SCHOOL IN DAEJEON (2021)<br>B.S. In Electrical Engineering at Korea Univ, Expected 2027</td>
     </tr>
 </table>
