--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ td {
     <tr>
        <td style="width: 90%;">Hello. <br> I'm Heejin Eun a student at Korea University and my major is electrical engineering. <br>
 아직 다양하고 많은 지식을 습득하는 과정에 있기에 저의 연구분야와 구체적인 전공은 찾아가는 길에 놓여있습니다. <br>
-제가 현재까지 가장 좋아하는 것은 '몰입'하는 것입니다. <br>
+학생시절부터 지금까지 가장 좋아하는 것은 '몰입'하는 것입니다. <br>
 대학에 오기전 몇년동안은 단기적인 것들에 몰입하곤했는데, 이제는 보다 더 안정적으로 장기적으로 몰입할 수 있는 것들을 찾고 있는 중입니다.</td>
         <td style="width: 10%;"><img src = "hoho.jpg" width="100%"></td>
     </tr>
