--- a/cleanver.html
+++ b/cleanver.html
@@ -17,116 +17,190 @@ td {
 </head>
 
 <body>
-<table>
-  <tr>
-    <td style="width: 10%;"><img src = "hoho.jpg" width="100%"></td>
-    <td>
-      <table>
-        <tr>
-          <td>name</td>
-          <td>은희진 (Heejin Eun)</td>
-        </tr>
-        <tr>
-          <td>E-mail</td>
-          <td>aghj@korea.ac.kr</td>
-        </tr>
-        <tr>
-          <td>homepage</td>
-          <td>Not yet</td>
-        </tr>
-        <tr>
-          <td>telephone number</td>
-          <td>010-1234-1234</td>
-          <td>mobile</td>
-          <td>010-1234-1234</td>
-        </tr>
-        <tr>
-          <td>address</td>
-          <td>ㅎ_ㅎ</td>
-        </tr>
-        <tr>
-          <td>house holder</td>
-          <td>gyeongmin</td>
-          <td>relatation</td>
-          <td>mother</td>
-        </tr>
-      </table>
-    </td>
-    </tr>
-</table>
-
-<ol>
-  <li>BIOGRAPHICAL informaion</li>
-  <table>
-    <tr>
-      <td>final academic clique</td>
-      <td>graduated from high school</td>
-      <td>marital status</td>
-      <td>single</td>
-      <td>religion</td>
-      <td>a little bit christian</td>
-    </tr>
-    <tr>
-      <td>height</td>
-      <td>166cm</td>
-      <td>weight</td>
-      <td>47kg</td>
-      <td>blood type</td>
-      <td>A</td>
-    </tr>
-    <tr>
-      <td>visual acuity</td>
-      <td>right 1.0, left 0.8</td>
-      <td>hobby</td>
-      <td>Not yet</td>
-      <td>special ability</td>
-      <td>멍때리기</td>
-    </tr>
+  <h2 style="color: rgb(60, 6, 134);"><strong>ABOUT ME</strong></h2>
+  <table width="100%" style="margin-left: auto; margin-left: auto;">
+    <colgroup style="text-align: center;">
+      <col style="width: 20%; height: 20px;">
+      <col style="width: 20%; height: 20px">
+      <col style="width: 25%; height: 20px">
+      <col style="width: 15%; height: 20px">
+      <col style="width: 20%; height: 20px">
+    </colgroup>
+    <tbody style="text-align: center;">
+      <tr>
+        <td rowspan="6"><img src="profile.png" style="width: 50%;"></td>
+        <th>name</th>
+        <td colspan="3">Heejin Eun</td>
+      </tr>
+      <tr>
+        <th>social security number</th>
+        <td colspan="3">000-00-0000000</td>
+      </tr>
+      <tr>
+        <th>E-mail</th>
+        <td colspan="3">aghj@korea.ac.kr</td>
+      </tr>
+      <tr>
+        <th>homepage</th>
+        <td colspan="3">Build-ing</td>
+      </Tr>
+      <tr>
+        <th>telephone number</th>
+        <td>010-1234-1234</td>
+        <th>mobile</th>
+        <td>010-1111-1111</td>
+      </tr>
+      <Tr>
+        <th>home address</th>
+        <td colspan="3">somewhere</td>
+      </Tr>
+      <tr>
+        <td>census registration</td>
+        <th>house holder</th>
+        <td>Gyeongmin</td>
+        <th>relation</th>
+        <td>mother</td>
+      </tr>
+    </tbody>
   </table>
-  <li>ACADEMIC clique details</li>
-  <table>
-    <tr>
-      <td>year.month.day</td>
-      <td>school name</td>
-      <td>major</td>
-    </tr>
-    <tr>
-      <td>27.03.02</td>
-      <td>Korea university, Bachelor of electrical engineering</td>
-      <td>electrical engineering</td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-    </tr>
-  <li>family details</li>
-  <table>
-    <tr>
-      <td>num</td>
-      <td>relation</td>
-      <td>name</td>
-      <td>age</td>
-      <td>final academic clique</td>
-      <td>50</td>
-    </tr>
-    <tr>
-      <td>name</td>
-      <td>seongmin</td>
-      <td>relation</td>
-      <td>father</td>
-      <td>age</td>
-      <td>50</td>
-    </tr>
-    <tr>
-      <td>name</td>
-      <td>heejin</td>
-      <td>relation</td>
-      <td>self</td>
-      <td>age</td>
-      <td>20</td>
-    </tr>
-  <li>career details</li>
-  <li>cetificate of qualifications</li>
-</ol>
+  <br>
+  
+  <h2 style="margin-left: 20%;">1. Biographical information</h2>
+  <table width="80%" style="margin-left: 20%;">
+    <colgroup style="text-align: center;">
+      <col width="16.33%">
+      <col width="16.33%">
+      <col width="16.33%">
+      <col width="16.33%">
+      <col width="16.33%">
+      <col width="16.33%">
+    </colgroup>
+    <tbody style="text-align: center;">
+      <tr>
+        <th>final academic clique</th>
+        <td>graduated from<br>high school</td>
+        <th>marital status</th>
+        <td>single</td>
+        <th>religion</th>
+        <td>a little bit chri.-.-</td>
+      </tr>
+      <tr>
+        <th>height</th>
+        <td>166cm</td>
+        <th>weight</th>
+        <td>7mg</td>
+        <th>bloodtype</th>
+        <td>A</td>
+      </tr>
+      <tr>
+        <th>visual acutiy</th>
+        <td>1.0/0.5</td>
+        <th>hobby</th>
+        <td>find-ing</td>
+        <th>special ability</th>
+        <td>멍때리기</td>
+      </tr>
+    </tbody>
+  </table>
+  <h2 style="margin-left: 20%;">2.Academic details</h2>
+  <table width="80%" style="margin-left: 20%;">
+    <colgroup style="text-align: center;">
+      <col width="15%">
+      <Col width="42.5%">
+      <col width="42.5%">
+    </colgroup>
+    <tbody style="text-align: center;">
+      <tr>
+        <th>period</th>
+        <th>school name</th>
+        <th>major</th>
+      </tr>
+      <tr>
+        <td>2021-2023</td>
+        <td>High school</td>
+        <td>student?</td>
+      </tr>
+      <tr>
+        <td>2024-2027</td>
+        <td>Korea university</td>
+        <td>Electrical engineering</td>
+      </tr>
+    </tbody>
+  </table>
+  <h2 style="margin-left: 20%;">3.Family datails</h2>
+  <table width="80%" style="margin-left:20%">
+    <colgroup style="text-align: center;">
+      <col width="7.5%">
+      <col width="15%">
+      <col width="30%">
+      <col width="7.5%">
+      <col width="20%">
+      <col width="20%">
+    </colgroup>
+    <tbody style="text-align: center;">
+      <tr>
+        <th>num</td>
+        <th>relation</th>
+        <th>name</th>
+        <th>age</th>
+        <th>final academic clique</th>
+        <th>cohaitaion situation</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Mother</td>
+        <td style="color: white;">d</td>
+        <td style="color: white;">d</td>
+        <td>graduated university</td>
+        <td>yes/<u>no</u></td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Father</td>
+        <td style="color: white;">h</td>
+        <td style="color: white;">h</td>
+        <td>graduated university</td>
+        <td>yes/<u>no</u></td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>sister</td>
+        <td style="color: white;">d</td>
+        <td style="color: white;">d</td>
+        <td>graduated middle school</td>
+        <td>yes/<u>no</u></td>
+      </tr>
+    </tbody>
+  </table>
+  <h2 style="margin-left: 20%;">4. Relevant Coursework</h2>
+  <table width="80%" style="margin-left: 20%">
+    <colgroup style="text-align: center;">
+      <col width="10%">
+      <col width="45%">
+      <col width="45%">
+    </colgroup>
+    <tbody style="text-align: center;">
+      <tr>
+        <th>num</th>
+        <th>Semester</th>
+        <th>Course Title</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>2024 Fall</td>
+        <td>데이터과학과 인공지능</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>2024 Winter</td>
+        <td>General iology</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>2025 Spring</td>
+        <td>Elcertrical circuit</td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 </html>
