--- a/1.html
+++ b/1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>clean ver.</title>
+<title>clean.ver</title>
 <style>
     table {
   border-collapse: collapse;
