--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <body>
         <h1 style="font-size: xxxx-large;">Welcome~!</h1>
         <h2 style="font-size: medium;">if you wanna see more clean.ver?<br> <a href="1.html">click!</a></h2>
-        <h2 style="font-size: medium;">if tou wanna see more dirty.ver><br> <a href="2.html">click!</a></h2>
+        <h2 style="font-size: medium;">if tou wanna see more dirty.ver?<br> <a href="2.html">click!</a></h2>
     </body>
 </html>
