--- a/2.html
+++ b/2.html
@@ -19,7 +19,7 @@ td {
 
 <body>
 <h1 style="font-size: xxx-large;" style = "text-align: center;"> WELCOME ~~</h1>
-<h2 style="font-size: xxxx-small;">if you wanna see more clean ver. <a href="clean ver.html">click!</a></h2>
+<h2 style="font-size: xxxx-small;">if you wanna see more clean ver. <a href="1.html">click!</a></h2>
 
 <h2>> BASIC INFO</h2>
 <table>
